fix overflow hidden

--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -2,7 +2,7 @@
   width: 90%;
   position: relative;
   height: 70%;
-  overflow: auto;
+  overflow: hidden;
   h1.page-title {
     margin-left: 100px;
     margin-top: 10px;
